--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h4>Bok Choi</h4>
 
       <div class="card">
-        <img src="https://images.immediate.co.uk/production/volatile/sites/30/2022/07/Yaki-udon-46d230c.jpg" alt="img">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTo4SuV8WEHFGisuctSCAXhG7KBvd1xY6Yw9Q&s" alt="img">
         <div class="card-text">
           <h1>Sauces Masterclass</h1>
           <h4>One day workshop</h4>
